fixed navbar padding on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -147,6 +147,7 @@ header {
     float: left;
     margin: 0;
     -webkit-padding-start: 0;
+    padding: 0;
 }
 
 .top-menu .navbar li {
